--- a/wercker.yml
+++ b/wercker.yml
@@ -62,7 +62,7 @@ kubernetes-deploy:
         name: Remove template files
         cwd: $WERCKER_ROOT/.
         code: |
-          rm *.yaml
+          rm *.template.yaml
     - script:
         name: debug
         cwd: $WERCKER_ROOT/.
